--- a/codebase/skins/debug/glamour.css
+++ b/codebase/skins/debug/glamour.css
@@ -419,6 +419,10 @@ x\:ui {
   padding: 6px 5px 6px 4px;
   width: 8px;
   cursor: pointer;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .webix_nav_item div {
   -webkit-border-radius: 50%;
@@ -839,7 +843,7 @@ x\:ui {
 }
 .webix_c_scroll_y {
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   width: 10px;
   right: 0px;
 }
@@ -862,7 +866,7 @@ x\:ui {
 }
 .webix_c_scroll_x {
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   height: 10px;
   bottom: 0px;
 }
@@ -882,6 +886,21 @@ x\:ui {
 .webix_c_scroll_x.webix_scroll_active div {
   height: 10px;
   margin: 0px;
+}
+.webix_c_scroll_bar_y,
+.webix_c_scroll_bar_x {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.05);
+}
+.webix_c_scroll_bar_y {
+  height: 100%;
+  width: 10px;
+  right: 0px;
+}
+.webix_c_scroll_bar_x {
+  width: 100%;
+  height: 10px;
+  bottom: 0px;
 }
 .webix_scroll_cont {
   width: 100%;
@@ -1222,6 +1241,10 @@ div.webix_modal_cover {
 .webix_ss_sort_desc {
   position: absolute;
   right: 3px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .webix_hcell.webix_ss_filter {
   padding: 3px 5px 3px 5px;
@@ -1323,7 +1346,8 @@ div.webix_modal_cover {
   padding-left: 10px;
 }
 /*extra borders, for selection in row mode*/
-.webix_column > div.webix_row_select {
+.webix_column > div.webix_row_select,
+.webix_column > div.webix_invalid.webix_row_select:nth-child(even) {
   border-bottom: 1px solid #db1b45;
   padding-top: 0px;
 }
@@ -1393,7 +1417,9 @@ div.webix_modal_cover {
   border-top: 8px solid #f44;
   border-left: 8px solid transparent;
 }
-.webix_dtable_colrow {
+.webix_dtable_colrow,
+.webix_dtable_subrow,
+.webix_dtable_subview {
   position: absolute;
   left: 0px;
   top: 0px;
@@ -1403,6 +1429,16 @@ div.webix_modal_cover {
   padding-left: 10px;
   padding-top: 1px;
   border-bottom: 1px solid transparent;
+}
+.webix_dtable_subrow {
+  border-top: 1px solid transparent;
+  text-align: right;
+}
+.webix_dtable_subview {
+  background: transparent;
+  border-top: 1px solid transparent;
+  padding: 0px 0px 0px 0px;
+  padding-left: 10px;
 }
 .number .webix_cell {
   text-align: right;
@@ -1579,6 +1615,29 @@ div.webix_modal_cover {
 .webix_point_left {
   background-position: 0 -9px;
 }
+.webix_resize_handle {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  bottom: 0px;
+  line-height: 15px;
+  right: -1px;
+  text-align: center;
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAMAAAAMCGV4AAAABlBMVEUAAAAAAAClZ7nPAAAAAXRSTlMAQObYZgAAABZJREFUeAFjIAUwUshlpJDLSIhLGAAACQ4AFk79JaMAAAAASUVORK5CYII=);
+  cursor: nw-resize;
+}
+.webix_resize_frame {
+  position: absolute;
+  filter: alpha(opacity=10);
+  opacity: 0.1;
+  background: #bcbcbc;
+  display: block;
+  border: 1px solid #898989;
+  box-shadow: 1px 3px 6px #000;
+}
+.webix_resize_cursor {
+  cursor: nw-resize;
+}
 /*basis*/
 .webix_tree .webix_scroll_cont > .webix_tree_leaves {
   padding: 9px 10px 9px 9px;
@@ -1618,6 +1677,11 @@ div.webix_modal_cover {
   display: inline-block !important;
   margin-left: -5px;
   float: none;
+}
+.webix_measure_size input,
+.webix_measure_size textarea,
+.webix_measure_size select {
+  width: 5px;
 }
 .webix_tree_close,
 .webix_tree_open,
@@ -1740,6 +1804,10 @@ div.webix_modal_cover {
   height: 42px;
   background-repeat: no-repeat;
   background-position: 11.5px 4px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .webix_cal_prev_button {
   left: 17px;
@@ -1790,6 +1858,10 @@ div.webix_modal_cover {
   cursor: pointer;
   font-size: 12px;
   color: #555555;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .webix_cal_week_num {
   color: #aeaeae;
@@ -1810,17 +1882,34 @@ div.webix_modal_cover {
 .webix_cal_inactive {
   background: #888;
 }
-.webix_cal_day_disabled {
+.webix_cal_day_disabled,
+.webix_cal_day_disabled.webix_cal_event {
   color: #bbbbbb;
-  background: #f4f4f4 !important;
+  background: #f4f4f4;
+}
+.webix_hours .webix_cal_day_disabled,
+.webix_minutes .webix_cal_day_disabled,
+.webix_hours .webix_cal_day_disabled.webix_cal_event,
+.webix_minutes .webix_cal_day_disabled.webix_cal_event {
+  background: #f4f4f4;
+  font-weight: normal;
+  text-decoration: line-through;
 }
 .webix_cal_month_name {
   cursor: pointer;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .webix_cal_block {
   float: left;
   text-align: center;
   cursor: pointer;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .webix_selected {
   background: #e42750;
@@ -2061,6 +2150,10 @@ div.webix_modal_cover {
 }
 .webix_color_palette {
   text-align: left;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .webix_color_row,
 .webix_color_row div,
@@ -2356,7 +2449,8 @@ input.webixtype_next {
 .webix_el_text input,
 .webix_el_search input,
 .webix_el_combo input,
-.webix_el_datepicker input {
+.webix_el_datepicker input,
+.webix_el_colorpicker input {
   height: 100%;
   padding: 0px 10px;
   border: 1px solid rgba(0, 0, 0, 0);
@@ -2381,7 +2475,7 @@ input.webixtype_next {
 }*/
 .webix_inp_label {
   float: left;
-  padding-top: 3px;
+  padding-top: 1px;
   padding-left: 3px;
   padding-right: 7.5px;
   text-overflow: ellipsis;
@@ -2645,6 +2739,13 @@ body:not(:-moz-handler-blocked) .webix_el_select select {
 .webix_line_break {
   clear: both;
 }
+.webix_custom_checkbox,
+.webix_custom_radio {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 .webix_line_break {
   height: 4.5px;
 }
@@ -2674,11 +2775,12 @@ textarea.webix_invalid {
   font-size: 13px;
   color: #fd595f;
 }
-.webix_el_colorpicker .webix_inp_static div {
-  float: right;
+.webix_el_colorpicker .webix_input_icon {
+  padding-left: 0;
+  top: 7px;
+  right: 8px;
   width: 20px;
   height: 20px;
-  margin: 2px -16px 0px -5px;
   border-radius: 0px;
 }
 .webix_el_search .webix_el_box {
@@ -5329,6 +5431,62 @@ label.webix_required:after {
 .portlet_markerright {
   width: 50%;
   left: 50%;
+}
+.webix_view.webix_pdf {
+  background-color: #404040;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.webix_pdf .canvas_wrapper {
+  margin: 0px auto;
+  box-shadow: 5px 5px 15px #1c1c1c;
+  width: 100%;
+  height: 100%;
+}
+.webix_toolbar.pdf_bar {
+  background-color: #474747;
+}
+.webix_toolbar.pdf_bar .webix_icon_btn {
+  font-size: 15px;
+}
+.webix_toolbar.pdf_bar .webix_img_btn:focus,
+.webix_toolbar.pdf_bar .webix_img_btn:hover {
+  background-color: #404040;
+}
+.webix_toolbar.pdf_bar .webix_template {
+  background-color: #474747;
+  color: #fff;
+  line-height: 2em;
+}
+.webix_toolbar.pdf_bar .webix_el_box input,
+.webix_toolbar.pdf_bar .webix_inp_static {
+  background-color: #5c5c5c;
+  color: #fff;
+  border-color: #404040;
+}
+.webix_toolbar.pdf_bar .webix_el_box input:focus,
+.webix_toolbar.pdf_bar .webix_inp_static:focus {
+  border-color: #333;
+}
+.webix_toolbar.pdf_bar .webix_el_box .webix_input_icon {
+  color: #fff;
+}
+.webix_view.webix_popup.pdf_opt_list {
+  box-shadow: 5px 5px 15px #1c1c1c;
+  border: none;
+}
+.pdf_opt_list .webix_list {
+  background-color: #404040;
+  color: #fff;
+}
+.pdf_opt_list .webix_list .webix_list_item {
+  border-color: #474747;
+  line-height: 1.5em;
+}
+.pdf_opt_list .webix_list .webix_list_item.webix_selected,
+.pdf_opt_list .webix_list .webix_list_item:hover {
+  color: #404040;
+  background-color: #fff;
 }
 /*[L]*/
 /*[L]*/
